fix: some bug fixes for shoppingCart endpoints