@@ -1,35 +1,35 @@
 package com.ainan.ecommforallbackend.service;
 
 import com.ainan.ecommforallbackend.dto.CartItemDto;
+import com.ainan.ecommforallbackend.dto.ProductImageDto;
 import com.ainan.ecommforallbackend.dto.ShoppingCartDto;
-import com.ainan.ecommforallbackend.entity.CartItem;
-import com.ainan.ecommforallbackend.entity.Product;
-import com.ainan.ecommforallbackend.entity.ShoppingCart;
-import com.ainan.ecommforallbackend.entity.User;
+import com.ainan.ecommforallbackend.entity.*;
+import com.ainan.ecommforallbackend.exception.ResourceNotFoundException;
 import com.ainan.ecommforallbackend.mapper.CartItemMapper;
 import com.ainan.ecommforallbackend.mapper.ShoppingCartMapper;
-import com.ainan.ecommforallbackend.repository.CartItemRepository;
-import com.ainan.ecommforallbackend.repository.ProductRepository;
-import com.ainan.ecommforallbackend.repository.ShoppingCartRepository;
-import com.ainan.ecommforallbackend.repository.UserRepository;
-import lombok.Data;
+import com.ainan.ecommforallbackend.repository.*;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
-@Data
+@Slf4j
 @Service
 public class ShoppingCartServiceImpl implements ShoppingCartService {
 
     private final ShoppingCartRepository shoppingCartRepository;
     private final CartItemRepository cartItemRepository;
+    private final ProductVariantRepository productVariantRepository;
     private final ProductRepository productRepository;
+    private final ProductImageService productImageService;
     private final UserRepository userRepository;
     private final ShoppingCartMapper shoppingCartMapper;
     private final CartItemMapper cartItemMapper;
@@ -43,12 +43,15 @@ public class ShoppingCartServiceImpl implements ShoppingCartService {
 
             if (existingCart.isEmpty()) {
                 User user = userRepository.findById(userUUID)
-                        .orElseThrow(() -> new RuntimeException("User not found with ID: " + userId));
+                        .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
                 ShoppingCart newCart = new ShoppingCart();
                 newCart.setUser(user);
+                newCart.setStatus(true);
                 shoppingCartRepository.save(newCart);
+                log.info("Created shopping cart for user: {}", userId);
             }
         } catch (Exception e) {
+            log.error("Failed to create shopping cart for user {}: {}", userId, e.getMessage(), e);
             throw new RuntimeException("Failed to create shopping cart for user: " + userId, e);
         }
     }
@@ -57,47 +60,87 @@ public class ShoppingCartServiceImpl implements ShoppingCartService {
     @Transactional(readOnly = true)
     public ShoppingCartDto getShoppingCartByUserId(String userId) {
         UUID userUUID = UUID.fromString(userId);
-        return shoppingCartRepository.findByUserId(userUUID)
-                .map(shoppingCartMapper::toDto)
-                .orElseThrow(() -> new RuntimeException("Shopping cart not found for user: " + userId));
+        ShoppingCart cart = shoppingCartRepository.findByUserId(userUUID)
+                .orElseThrow(() -> new ResourceNotFoundException("Shopping cart not found for user: " + userId));
+        ShoppingCartDto cartDto = shoppingCartMapper.toDto(cart);
+
+        List<CartItemDto> cartItems = cart.getCartItems().stream()
+                .map(cartItemMapper::toDto)
+                .collect(Collectors.toList());
+
+        cartDto.setItems(addPrimaryImagesToCartItems(cartItems));
+        return cartDto;
     }
 
     @Override
     @Transactional
-    public void clearShoppingCart(String userId) {
-        UUID userUUID = UUID.fromString(userId);
-        ShoppingCart shoppingCart = shoppingCartRepository.findByUserId(userUUID)
-                .orElseThrow(() -> new RuntimeException("Shopping cart not found for user: " + userId));
-        cartItemRepository.deleteAllByCartId(shoppingCart.getId());
-        shoppingCart.getCartItems().clear();
-        shoppingCartRepository.save(shoppingCart);
-    }
-
-    @Override
-    @Transactional
-    public CartItemDto addItemToCart(String userId, String productId, int quantity) {
+    public CartItemDto addItemToCart(String userId, String productId, String variantId, int quantity) {
         if (quantity <= 0) {
             throw new IllegalArgumentException("Quantity must be greater than zero");
         }
+
         UUID userUUID = UUID.fromString(userId);
-        UUID productUUID = UUID.fromString(productId);
-        ShoppingCart shoppingCart = shoppingCartRepository.findByUserId(userUUID)
-                .orElseThrow(() -> new RuntimeException("Shopping cart not found for user: " + userId));
-        Product product = productRepository.findById(productUUID).orElseThrow(() -> new RuntimeException("Product not found with ID: " + productId));
-        Optional<CartItem> existingCartItem = cartItemRepository.findByCartIdAndProductId(shoppingCart.getId(), productUUID);
+        UUID productIdUUID = UUID.fromString(productId);
+        UUID variantIdUUID = variantId != null ? UUID.fromString(variantId) : null;
+
+        ShoppingCart cart = shoppingCartRepository.findByUserId(userUUID)
+                .orElseThrow(() -> new ResourceNotFoundException("Shopping cart not found for user: " + userId));
+
+        Product product = productRepository.findById(productIdUUID)
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
+
+        // Check if item already exists in cart
+        Optional<CartItem> existingCartItem;
+        if (variantId != null) {
+            existingCartItem = cartItemRepository.findByCartIdAndProductIdAndVariantId(
+                    cart.getId(), productIdUUID, variantIdUUID);
+        } else {
+            existingCartItem = cartItemRepository.findByCartIdAndProductIdAndVariantIsNull(
+                    cart.getId(), productIdUUID);
+        }
+
         CartItem cartItem;
         if (existingCartItem.isPresent()) {
+            // Update existing item - add to existing quantity, keep original price
             cartItem = existingCartItem.get();
-            cartItem.setQuantity(quantity);
+            cartItem.setQuantity(cartItem.getQuantity());
+            log.info("Updated existing cart item for user {}, product {}: quantity {} -> {}, price remains {}",
+                    userId, productId, cartItem.getQuantity() - quantity, cartItem.getQuantity(),
+                    cartItem.getUnitPrice());
         } else {
+            // Create new item
             cartItem = new CartItem();
-            cartItem.setCart(shoppingCart);
+            cartItem.setCart(cart);
             cartItem.setProduct(product);
             cartItem.setQuantity(quantity);
-            cartItem.setUnitPrice(product.getMinPrice());
-            shoppingCart.getCartItems().add(cartItem);
+
+            // Set variant and price based on product type
+            if (variantId != null) {
+                // Product with variant
+                ProductVariant variant = productVariantRepository.findById(variantIdUUID)
+                        .orElseThrow(() -> new ResourceNotFoundException("Product variant not found"));
+                cartItem.setVariant(variant);
+                cartItem.setUnitPrice(variant.getPrice()); // Lock variant price
+                log.info(
+                        "Added new cart item with variant for user {}, product {}, variant {}: quantity {}, locked price {}",
+                        userId, productId, variantId, quantity, variant.getPrice());
+            } else {
+                // Product without variant - use product's own price
+                if (product.getPrice() == null) {
+                    throw new IllegalStateException("Product has no price and no variants available");
+                }
+                cartItem.setVariant(null);
+                cartItem.setUnitPrice(product.getPrice()); // Lock product price
+                log.info("Added new cart item for user {}, product {}: quantity {}, locked price {}",
+                        userId, productId, quantity, product.getPrice());
+            }
+
+            // Add to cart's collection for bidirectional sync
+            cart.getCartItems().add(cartItem);
         }
-        cartItemRepository.save(cartItem);
+
+        // Save only the owning side (CartItem)
+        cartItem = cartItemRepository.save(cartItem);
         return cartItemMapper.toDto(cartItem);
     }
 
@@ -107,14 +150,24 @@ public class ShoppingCartServiceImpl implements ShoppingCartService {
         if (quantity <= 0) {
             throw new IllegalArgumentException("Quantity must be greater than zero");
         }
+
         UUID userUUID = UUID.fromString(userId);
         UUID cartItemUUID = UUID.fromString(cartItemId);
-        CartItem cartItem = cartItemRepository.findById(cartItemUUID).orElseThrow(() -> new RuntimeException("Cart item not found with ID: " + cartItemId));
+
+        CartItem cartItem = cartItemRepository.findById(cartItemUUID)
+                .orElseThrow(() -> new ResourceNotFoundException("Cart item not found with ID: " + cartItemId));
+
         if (!cartItem.getCart().getUser().getId().equals(userUUID)) {
-            throw new RuntimeException("Cart item does not belong to user: " + userId);
+            throw new IllegalArgumentException("Cart item does not belong to user: " + userId);
         }
+
+        // Update quantity but keep original price
         cartItem.setQuantity(quantity);
-        cartItemRepository.save(cartItem);
+        cartItem = cartItemRepository.save(cartItem);
+
+        log.info("Updated cart item quantity for user {}, cart item {}: new quantity {}, price remains {}",
+                userId, cartItemId, quantity, cartItem.getUnitPrice());
+
         return cartItemMapper.toDto(cartItem);
     }
 
@@ -123,13 +176,29 @@ public class ShoppingCartServiceImpl implements ShoppingCartService {
     public void removeItemFromCart(String userId, String cartItemId) {
         UUID userUUID = UUID.fromString(userId);
         UUID cartItemUUID = UUID.fromString(cartItemId);
-        CartItem cartItem = cartItemRepository.findById(cartItemUUID)
-                .orElseThrow(() -> new RuntimeException("Cart item not found with ID: " + cartItemId));
-        if (!cartItem.getCart().getUser().getId().equals(userUUID)) {
-            throw new RuntimeException("Cart item does not belong to user: " + userId);
-        }
-        cartItemRepository.delete(cartItem);
 
+        CartItem cartItem = cartItemRepository.findById(cartItemUUID)
+                .orElseThrow(() -> new ResourceNotFoundException("Cart item not found with ID: " + cartItemId));
+
+        if (!cartItem.getCart().getUser().getId().equals(userUUID)) {
+            throw new IllegalArgumentException("Cart item does not belong to user: " + userId);
+        }
+
+        cartItemRepository.delete(cartItem);
+        log.info("Removed cart item {} for user {}", cartItemId, userId);
+    }
+
+    @Override
+    @Transactional
+    public void clearShoppingCart(String userId) {
+        UUID userUUID = UUID.fromString(userId);
+        ShoppingCart shoppingCart = shoppingCartRepository.findByUserId(userUUID)
+                .orElseThrow(() -> new ResourceNotFoundException("Shopping cart not found for user: " + userId));
+
+        cartItemRepository.deleteAllByCartId(shoppingCart.getId());
+        // Clear the collection for bidirectional sync
+        shoppingCart.getCartItems().clear();
+        log.info("Cleared shopping cart for user {}", userId);
     }
 
     @Override
@@ -137,25 +206,56 @@ public class ShoppingCartServiceImpl implements ShoppingCartService {
     public List<CartItemDto> getCartItems(String userId) {
         UUID userUUID = UUID.fromString(userId);
         ShoppingCart shoppingCart = shoppingCartRepository.findByUserId(userUUID)
-                .orElseThrow(() -> new RuntimeException("Shopping cart not found for user: " + userId));
-        Set<CartItem> cartItems = shoppingCart.getCartItems();
-        return cartItems.stream().map(cartItemMapper::toDto)
-                .toList();
+                .orElseThrow(() -> new ResourceNotFoundException("Shopping cart not found for user: " + userId));
+
+        return shoppingCart.getCartItems().stream()
+                .map(cartItemMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public int getCartItemCount(String userId) {
         UUID userUUID = UUID.fromString(userId);
-        ShoppingCart shoppingCart = shoppingCartRepository.findByUserId(userUUID)
-                .orElseThrow(() -> new RuntimeException("Shopping cart not found for user: " + userId));
-        return shoppingCart.getCartItems().stream().mapToInt(CartItem::getQuantity).sum();
+        Optional<ShoppingCart> cart = shoppingCartRepository.findByUserId(userUUID);
+
+        return cart.map(shoppingCart -> shoppingCart.getCartItems().stream()
+                .mapToInt(CartItem::getQuantity)
+                .sum()).orElse(0);
+
     }
 
     @Override
     public double getCartTotalAmount(String userId) {
         UUID userUUID = UUID.fromString(userId);
-        ShoppingCart shoppingCart = shoppingCartRepository.findByUserId(userUUID)
-                .orElseThrow(() -> new RuntimeException("Shopping cart not found for user: " + userId));
-        return shoppingCart.getCartItems().stream().mapToDouble(item -> item.getUnitPrice().doubleValue() * item.getQuantity()).sum();
+        Optional<ShoppingCart> cart = shoppingCartRepository.findByUserId(userUUID);
+
+        return cart.map(shoppingCart -> shoppingCart.getCartItems().stream()
+                .mapToDouble(item -> item.getUnitPrice().doubleValue() * item.getQuantity())
+                .sum()).orElse(0.0);
+
     }
+
+    private List<CartItemDto> addPrimaryImagesToCartItems(List<CartItemDto> cartItemDtos) {
+        cartItemDtos.forEach(cartItemDto -> {
+            UUID imageProductId = cartItemDto.getProductId();
+            // Only fetch images if we have a valid product ID
+            try {
+                Page<ProductImageDto> primaryImages = productImageService.getImagesByProductId(
+                        imageProductId,
+                        PageRequest.of(0, 1));
+
+                if (!primaryImages.getContent().isEmpty()) {
+                    cartItemDto.setImageUrl(primaryImages.getContent().get(0));
+                }
+            } catch (Exception e) {
+                log.warn("Failed to fetch primary image for product {}: {}", imageProductId, e.getMessage());
+                // Set a default image or leave null
+                cartItemDto.setImageUrl(null);
+            }
+        });
+        return cartItemDtos;
+    }
+
+    ;
+
 }
